<resources>
    <string name="app_name">Cadastro de Clientes</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="labelClientes">Lista de Clientes</string>
    <string name="hintListaVazia">Lista Vazia</string>
    <string name="labelCadastrarCliente">Cadastrar Cliente</string>
    <string name="TextNome">Nome</string>
    <string name="TextLogin">Login</string>
    <string name="TextSenha">Senha</string>
    <string name="btnAdicionar">Adicionar</string>
</resources>
