<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CadastroActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_cadastro">

    <TextView
        android:id="@+id/labelCadastrarCliente"
        android:layout_width="191dp"
        android:layout_height="63dp"
        android:layout_marginTop="8dp"
        android:text="@string/labelCadastrarCliente"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/TextNome"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCadastrarCliente"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="395dp"
        android:layout_height="67dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/TextLogin"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="395dp"
        android:layout_height="75dp"
        android:layout_marginTop="288dp"
        android:ems="10"
        android:hint="@string/TextSenha"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="8dp"
        android:text="@string/btnAdicionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="408dp" />

</android.support.constraint.ConstraintLayout>